--- a/app/src/main/res/layout/chat_layout.xml
+++ b/app/src/main/res/layout/chat_layout.xml
@@ -19,20 +19,24 @@
 
     <EditText
         android:id="@+id/chat_mensaje"
-        android:layout_width="320dp"
+        android:layout_width="345dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_alignParentBottom="true"
+        android:background="@color/gris"
+        android:alpha="0.3"
         />
 
-    <Button
+
+    <ImageButton
         android:id="@+id/boton_login"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_toRightOf="@id/chat_mensaje"
         android:layout_marginTop="20dp"
-        android:text="@string/enviar"
+        android:scaleType="centerCrop"
+        android:src="@drawable/icon_mensaje"
         />
 
 </RelativeLayout>
