--- a/app/src/main/res/layout/chat_layout.xml
+++ b/app/src/main/res/layout/chat_layout.xml
@@ -14,17 +14,19 @@
         android:id="@+id/lista"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="50dp"
         />
 
     <EditText
         android:id="@+id/chat_mensaje"
         android:layout_width="345dp"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginBottom="5dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/gris"
-        android:alpha="0.3"
+        android:background="@color/grisAlpha"
         />
 
 
