--- a/app/src/main/res/layout/mensaje_layout.xml
+++ b/app/src/main/res/layout/mensaje_layout.xml
@@ -2,41 +2,36 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            android:alpha="0.3"
-            android:src="@color/gris" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/grisAlpha"
+        android:layout_marginBottom="5dp"
+        >
 
         <TextView
             android:id="@+id/mensaje_usuario"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
             android:fontFamily="monospace"
             android:text="@string/email"
+            android:textSize="15dp"
             android:textColor="@color/negro"
-            android:textSize="15dp" />
+            />
 
         <TextView
             android:id="@+id/mensaje_contenido"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/mensaje_usuario"
-            android:layout_marginLeft="10dp"
             android:fontFamily="monospace"
             android:text="@string/email"
+            android:textSize="18dp"
             android:textColor="@color/negro"
-            android:textSize="20dp" />
+            />
 
         <TextView
             android:id="@+id/mensaje_fecha"
@@ -44,11 +39,11 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/mensaje_contenido"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
             android:fontFamily="monospace"
             android:text="@string/email"
+            android:textSize="15dp"
             android:textColor="@color/negro"
-            android:textSize="15dp" />
+            />
 
     </RelativeLayout>
 
